# kitchen

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.ts  小白下厨-交互设计与大模型应用说明-含流程图.docx  小白下厨-交互设计与大模型应用说明.docx
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
data/: kitchen.sqlite
docs/: MVP验收清单.md  android-release-guide.md  core-interaction-flow.md
kitchen-helper/kitchen-helper/kitchen-helper/: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  tsconfig.server.json
kitchen-helper/kitchen-helper/kitchen-helper/android/: gradle.properties
kitchen-helper/kitchen-helper/kitchen-helper/server/: database.ts  repository.ts
kitchen-helper/kitchen-helper/kitchen-helper/src/: App.css  App.tsx  index.css  types.ts
kitchen-helper/kitchen-helper/kitchen-helper/src/features/kitchen/: CommunityScreen.tsx  CookScreen.tsx  HomeScreen.tsx  (+4 more)
kitchen-helper/kitchen-helper/kitchen-helper/src/lib/: api.ts  assistant.ts
server/: ai.ts  database.ts  importer.ts  index.ts  repository.ts  youtube-transcript-esm.d.ts
src/: App.css  App.tsx  index.css  types.ts
src/data/: recipes.ts
src/features/kitchen/: CommunityScreen.tsx  CookScreen.tsx  DiscoverScreen.tsx  FinishScreen.tsx  HomeScreen.tsx  ImportScreen.tsx  ProfileScreen.tsx  SearchHubScreen.tsx  shared.ts  useKitchenApp.ts
src/lib/: api.ts
tools/cloudflared-tunnel/: start.ps1
tools/whisper-service/: README.md  app.py  requirements.txt  setup.ps1  start.ps1
zhu/: CMakeLists.txt  README.md
zhu/src/: main.cpp
(+2 files in other folders)
